# Deep-Forge

./: .gitignore
app/src/: App.tsx  main.tsx  styles.css  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
core/: server.py
core/modules/: camera_utils.py
core/rust-engine/: Cargo.toml
core/rust-engine/dlc-server/: Cargo.toml
core/rust-engine/dlc-server/src/: lib.rs  main.rs  model_manifest.rs  profiles.rs  router.rs  state.rs
plans/: 260329-deferred-issues.md
plans/260328-0510-tauri-app-features/: phase-02-python-bundle.md  plan.md
plans/reports/: code-reviewer-260328-1133-phase2-sidecar-bundling.md  code-reviewer-260328-1505-cicd-build-scripts.md  code-reviewer-260328-1505-scrfd-detection-fixes.md  code-reviewer-260328-1505-server-parity-fixes.md  code-reviewer-260328-1505-swap-enhance-review.md  fullstack-developer-260328-1436-scrfd-face-detection.md  fullstack-developer-260328-1437-face-swap-arcface-rust.md  fullstack-developer-260328-1437-gfpgan-enhance-rs.md  fullstack-developer-260328-1437-rust-endpoints.md  fullstack-developer-260328-1505-dlc-capture-opencv.md  fullstack-developer-260328-1505-swap-image-pipeline.md  fullstack-developer-260328-1505-ws-video-handler.md  journal-260329-build-install-pain-points.md  researcher-260328-1257-amd-apu-npu-inference.md  researcher-260328-1305-vitisai-npu-feasibility.md  (+1 more)
scripts/: build-rust-sidecar-win.ps1  build-sidecar-macos.sh  build-sidecar-win.ps1  build-sidecar.sh  quantize-dynamic.py  quantize-inswapper-qdq.py  quantize-models-int8.py  quantize-qdq.py  setup-npu-sdk.ps1  upload-int8-models.py
(+22 files in other folders)
